3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

New command: 'use <item> with <item>', which enables complex item transformation.
 doc/Developers/item_transformation
 include/sproto.h
 lib/help/use
 server/c_object.c commands.c
Nicolas Weeger 2007-05-08

Remove obsolete object types.
 common/item.c
 include/define.h
 plugins/python/cfpython.c
Nicolas Weeger 2007-05-08

server/alchemy.c: Doxygen documentation, no functional change.
Nicolas Weeger 2007-05-08

utils/mapper.c: new parameter, -listunusedmaps, that'll generate a maps.unused file.
Nicolas Weeger 2007-05-07

server/plugins.c: fix plugin unloading which didn't call the closePlugin function.
server/c_wiz.c: document.
Nicolas Weeger 2007-05-07

Apply patch #1713563: Reopen log file on SIGHUP, courtesy Kari Pahula.
 common/logger.c
 include/global.h
 server/init.c
Nicolas Weeger 2007-05-05

Apply patch #1713564, Open log file only once with -detach, courtesy Kari Pahula.
 include/sproto.h
 server/daemon.c init.c
Nicolas Weeger 2007-05-05

Implement feature request #1657735: Server setting for handling 'incorrect' converters.
New server setting, 'allow_broken_converters', that controls what to do.
 common/init.c
 include/global.h
 lib/settings
 server/init.c
 types/converter/converter.c
Nicolas Weeger 2007-05-05

types/legacy/apply.c: fix broken LIGHTER.
Nicolas Weeger 2007-05-05

Fix some type issues in plugin. Wrap change_abil(). Add set_resist(). Add duration property.
 include/plugin.h sproto.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython_object.c
 server/plugins.c
Nicolas Weeger 2007-05-05
